# generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXTENSIBILITY.md  FIX_SUMMARY_ISSUE_1.md  LICENSE  README.md  mistakes.md
.config/@adi-family/: openapi-generator-config.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: petstore.yaml
src/: main.rs  operation_processor.rs  schema_processor.rs
src/config/: loader.rs  mod.rs  schema.rs
src/generators/: golang.rs  mod.rs  python.rs  typescript.rs  typescript_adi_http.rs
src/parsers/: mod.rs  openapi_parser.rs  schema_ir.rs
templates/golang/: client.go.tera
templates/python/: client.py.tera
templates/typescript/: client.ts.tera
