[package]
name = "openapi-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
openapiv3 = "2.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tera = "1.20"
indexmap = "2.0"
